deploy: eb686bb697bfbdb5d780025d550e1adcef4fc565

--- a/print.html
+++ b/print.html
@@ -15306,35 +15306,12 @@ To learn more, run the command again with --verbose.
 <li>updated: 2020-09-21</li>
 </ul>
 </blockquote>
-<h2><a class="header" href="#using-message-passing-to-transfer-data-between-threads" id="using-message-passing-to-transfer-data-between-threads">Using Message Passing to Transfer Data Between Threads</a></h2>
-<p>One increasingly popular approach to ensuring safe concurrency is <em>message
-passing</em>, where threads or actors communicate by sending each other messages
-containing data. Here’s the idea in a slogan from <a href="https://golang.org/doc/effective_go.html#concurrency">the Go language
-documentation</a>: 
-“Do not communicate by sharing memory; instead, share memory by communicating.”</p>
-<p>One major tool Rust has for accomplishing message-sending concurrency is the
-<em>channel</em>, a programming concept that Rust’s standard library provides an
-implementation of. You can imagine a channel in programming as being like a
-channel of water, such as a stream or a river. If you put something like a
-rubber duck or boat into a stream, it will travel downstream to the end of the
-waterway.</p>
-<p>A channel in programming has two halves: a transmitter and a receiver. The
-transmitter half is the upstream location where you put rubber ducks into the
-river, and the receiver half is where the rubber duck ends up downstream. One
-part of your code calls methods on the transmitter with the data you want to
-send, and another part checks the receiving end for arriving messages. A
-channel is said to be <em>closed</em> if either the transmitter or receiver half is
-dropped.</p>
-<p>Here, we’ll work up to a program that has one thread to generate values and
-send them down a channel, and another thread that will receive the values and
-print them out. We’ll be sending simple values between threads using a channel
-to illustrate the feature. Once you’re familiar with the technique, you could
-use channels to implement a chat system or a system where many threads perform
-parts of a calculation and send the parts to one thread that aggregates the
-results.</p>
-<p>First, in Listing 16-6, we’ll create a channel but not do anything with it.
-Note that this won’t compile yet because Rust can’t tell what type of values we
-want to send over the channel.</p>
+<h2><a class="header" href="#使用訊息傳遞在執行緒間傳送資料" id="使用訊息傳遞在執行緒間傳送資料">使用訊息傳遞在執行緒間傳送資料</a></h2>
+<p>其中一種確保安全並行且漸漸流行起來的方式是<em>訊息傳遞（message passing）</em>，執行緒或 actors 透過傳遞包含資料的訊息給彼此來溝通。此理念源自於 <a href="https://golang.org/doc/effective_go.html#concurrency">Go 語言技術文件</a>中的口號：「別透過共享記憶體來溝通，而是透過溝通共享記憶體。」 </p>
+<p>Rust 其中一個達成訊息傳遞並行的主要工具是<em>通道（channel）</em>，這是 Rust 標準函式庫有提供的程式設計概念。你可以把程式設計的通道想像成水流的通道，像是河流或小溪。如果你將橡皮小鴨或船隻放入河流中，它會順流而下到下游。</p>
+<p>程式設計中的通道有兩個部分：發送者（transmitter）與接收者（receiver）。發送者正是你會放置橡皮小鴨到河流中的上游，而接收者則是橡皮小鴨最後漂流到的下游。你程式碼中的一部分會呼叫發送者的方法來傳送你想要傳遞的資料，然後另一部分的程式碼會檢查接收者收到的訊息。當發送者或接收者有一方被釋放掉時，該通道就會被<em>關閉</em>。</p>
+<p>我們在此將寫一支程式，它會在一個執行緒中產生數值，傳送給通道，然後另一個執行緒會接收到數值並印出來。我們會使用通道在執行緒間傳送簡單的數值來作爲這個功能的解說。一旦你熟悉此技巧後，你可以使用通道來實作個聊天系統，或是一個利用數個執行緒進行運算，然後將結果傳入一個執行緒統整結果的分散式系統。</p>
+<p>首先在範例 16 -6，我們會建立個通道但還不會做任何事。注意這樣不會編譯通過因爲 Rust 無法知道我們想對通道傳入的數值型別爲何。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">use std::sync::mpsc;
 
@@ -15342,28 +15319,10 @@ fn main() {
     let (tx, rx) = mpsc::channel();
 }
 </code></pre>
-<p><span class="caption">範例 16-6: Creating a channel and assigning the two
-halves to <code>tx</code> and <code>rx</code></span></p>
-<p>We create a new channel using the <code>mpsc::channel</code> function; <code>mpsc</code> stands for
-<em>multiple producer, single consumer</em>. In short, the way Rust’s standard library
-implements channels means a channel can have multiple <em>sending</em> ends that
-produce values but only one <em>receiving</em> end that consumes those values. Imagine
-multiple streams flowing together into one big river: everything sent down any
-of the streams will end up in one river at the end. We’ll start with a single
-producer for now, but we’ll add multiple producers when we get this example
-working.</p>
-<p>The <code>mpsc::channel</code> function returns a tuple, the first element of which is the
-sending end and the second element is the receiving end. The abbreviations <code>tx</code>
-and <code>rx</code> are traditionally used in many fields for <em>transmitter</em> and <em>receiver</em>
-respectively, so we name our variables as such to indicate each end. We’re
-using a <code>let</code> statement with a pattern that destructures the tuples; we’ll
-discuss the use of patterns in <code>let</code> statements and destructuring in Chapter
-18. Using a <code>let</code> statement this way is a convenient approach to extract the
-pieces of the tuple returned by <code>mpsc::channel</code>.</p>
-<p>Let’s move the transmitting end into a spawned thread and have it send one
-string so the spawned thread is communicating with the main thread, as shown in
-Listing 16-7. This is like putting a rubber duck in the river upstream or
-sending a chat message from one thread to another.</p>
+<p><span class="caption">範例 16-6：建立通道並賦值分別兩個部分給 <code>tx</code> 與 <code>rx</code></span></p>
+<p>我們使用 <code>mpsc::channel</code> 函式來建立新的通道，<code>mpsc</code> 指的是<em>多重生產者、唯一消費者（multiple producer, single consumer）</em>。簡單來說，Rust 標準函式庫實作通道的方式讓通道可以有多個<em>發送端</em>來產生數值，不過只有一個<em>接收端</em>能消耗這些數值。想像有數個溪流匯聚成一條大河流，任何溪流傳送的任何東西最終都會流向河流的下游。我們會先從單一生產者開始，等這個範例能夠執行後我們再來增加數個生產者。</p>
+<p><code>mpsc::channel</code> 函式會回傳一個元組，第一個元素是發送端然後第二個元素是接收端。<code>tx</code> 與 <code>rx</code> 通常分別作爲*發送者（transmitter）<em>與</em>接收者（receiver）*的縮寫，所以我們以此作爲我們的變數名稱。我們的 <code>let</code> 陳述式使用到了能解構元組的模式我們會在第時八章討論 <code>let</code> 陳述式的模式與解構方式。用這樣的方式使用 <code>let</code> 能輕鬆取出 <code>mpsc::channel</code> 回傳的元組每個部分。</p>
+<p>讓我們將發送端移進一個新產生的執行緒並讓它傳送一條字串，這樣產生的執行緒就可以與主執行緒溝通了，如範例 16-7 所示。這就像是在河流上游放了一隻橡皮小鴨，或是從一條執行緒傳送一條聊天訊息給別條執行緒一樣。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::sync::mpsc;
 use std::thread;
@@ -15377,21 +15336,10 @@ fn main() {
     });
 }
 </code></pre></pre>
-<p><span class="caption">範例 16-7: Moving <code>tx</code> to a spawned thread and sending
-“hi”</span></p>
-<p>Again, we’re using <code>thread::spawn</code> to create a new thread and then using <code>move</code>
-to move <code>tx</code> into the closure so the spawned thread owns <code>tx</code>. The spawned
-thread needs to own the transmitting end of the channel to be able to send
-messages through the channel.</p>
-<p>The transmitting end has a <code>send</code> method that takes the value we want to send.
-The <code>send</code> method returns a <code>Result&lt;T, E&gt;</code> type, so if the receiving end has
-already been dropped and there’s nowhere to send a value, the send operation
-will return an error. In this example, we’re calling <code>unwrap</code> to panic in case
-of an error. But in a real application, we would handle it properly: return to
-Chapter 9 to review strategies for proper error handling.</p>
-<p>In Listing 16-8, we’ll get the value from the receiving end of the channel in
-the main thread. This is like retrieving the rubber duck from the water at the
-end of the river or like getting a chat message.</p>
+<p><span class="caption">範例 16-7：將 <code>tx</code> 移入產生的執行緒並傳送「hi」</span></p>
+<p>我們再次使用 <code>thread::spawn</code> 來建立新的執行緒並使用 <code>move</code> 將 <code>tx</code> 移入閉包，讓產生的執行緒擁有 <code>tx</code>。產生的執行緒必須要擁有通道的發送端才能夠傳送訊息至通道。</p>
+<p>發送端有個 <code>send</code> 方法可以接受我們想傳遞的數值。<code>send</code> 方法會回傳 <code>Result&lt;T, E&gt;</code> 型別，所以如果接收端已經被釋放因而沒有任何地方可以傳遞數值的話，傳送的動作就會回傳錯誤。在此例中，我們呼叫 <code>unwrap</code> 所以有錯誤時就會直接恐慌。但在實際的應用程式中，我們會更妥善地處理它，你可以回顧第九章來複習如何適當地處理錯誤。</p>
+<p>在範例 16-8 我們會在主執行緒中從通道的接收端取得數值。這就像在河流下游取回順流而下的橡皮小鴨，或是像取得一條聊天訊息一樣。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::sync::mpsc;
 use std::thread;
@@ -15408,40 +15356,19 @@ fn main() {
     println!(&quot;Got: {}&quot;, received);
 }
 </code></pre></pre>
-<p><span class="caption">範例 16-8: Receiving the value “hi” in the main thread
-and printing it</span></p>
-<p>The receiving end of a channel has two useful methods: <code>recv</code> and <code>try_recv</code>.
-We’re using <code>recv</code>, short for <em>receive</em>, which will block the main thread’s
-execution and wait until a value is sent down the channel. Once a value is
-sent, <code>recv</code> will return it in a <code>Result&lt;T, E&gt;</code>. When the sending end of the
-channel closes, <code>recv</code> will return an error to signal that no more values will
-be coming.</p>
-<p>The <code>try_recv</code> method doesn’t block, but will instead return a <code>Result&lt;T, E&gt;</code>
-immediately: an <code>Ok</code> value holding a message if one is available and an <code>Err</code>
-value if there aren’t any messages this time. Using <code>try_recv</code> is useful if
-this thread has other work to do while waiting for messages: we could write a
-loop that calls <code>try_recv</code> every so often, handles a message if one is
-available, and otherwise does other work for a little while until checking
-again.</p>
-<p>We’ve used <code>recv</code> in this example for simplicity; we don’t have any other work
-for the main thread to do other than wait for messages, so blocking the main
-thread is appropriate.</p>
-<p>When we run the code in Listing 16-8, we’ll see the value printed from the main
-thread:</p>
+<p><span class="caption">範例 16-8：在主執行緒取得數值「hi」並顯示出來</span></p>
+<p>通道的接收端有兩個實用的方法：<code>recv</code> 與 <code>try_recv</code>。我們使用 <code>recv</code> 作爲*接收（receive）*的縮寫，這位阻擋主執行緒的運行並等待直到通道有訊息傳入。一旦有數值傳遞，<code>recv</code> 會就以此回傳 <code>Result&lt;T, E&gt;</code>。當通道的發送端關閉時，<code>recv</code> 會回傳錯誤來通知不會再有任何數值出現了。</p>
+<p><code>try_recv</code> 方法則不會阻擋，而是會立即回傳 <code>Result&lt;T, E&gt;</code>。如果有數值的話，就會是存有訊息的 <code>Ok</code> 數值，如果尚未有任何數值的話，就會是 <code>Err</code> 數值。<code>try_recv</code> 適用於如果此執行緒在等待訊息的同時有其他事要做的情形。我們可以寫個迴圈來時不時呼叫 <code>try_recv</code>，當有數值時處理訊息，不然的話就先做點其他事直到再次檢查爲止。</p>
+<p>我們出於方便考量在此例使用 <code>recv</code>，我們的主執行緒除了等待訊息以外沒有其他事好做，所以阻擋主執行緒是合理的。</p>
+<p>當我們執行範例 16-8 的程式碼，我們會看到主執行緒印出的數值：</p>
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
 <pre><code class="language-text">Got: hi
 </code></pre>
-<p>Perfect!</p>
-<h3><a class="header" href="#channels-and-ownership-transference" id="channels-and-ownership-transference">Channels and Ownership Transference</a></h3>
-<p>The ownership rules play a vital role in message sending because they help you
-write safe, concurrent code. Preventing errors in concurrent programming is the
-advantage of thinking about ownership throughout your Rust programs. Let’s do
-an experiment to show how channels and ownership work together to prevent
-problems: we’ll try to use a <code>val</code> value in the spawned thread <em>after</em> we’ve
-sent it down the channel. Try compiling the code in Listing 16-9 to see why
-this code isn’t allowed:</p>
+<p>太棒了！</p>
+<h3><a class="header" href="#通道與所有權轉移" id="通道與所有權轉移">通道與所有權轉移</a></h3>
+<p>所有權規則在訊息傳遞中扮演了重要的角色，因爲它們可以幫助你寫出安全的並行程式碼。在 Rust 程式中考慮所有權的其中一項好處就是你能在並行程式設計避免錯誤發生。讓我們做個實驗來看通道與所有權如何一起合作來避免問題發生，我們會在 <code>val</code> 數值傳送給通道<em>之後</em>嘗試使用其值。請嘗試編譯範例 16-9 的程式碼並看看爲何此程式碼不被允許：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">use std::sync::mpsc;
 use std::thread;
@@ -15459,14 +15386,8 @@ fn main() {
     println!(&quot;Got: {}&quot;, received);
 }
 </code></pre>
-<p><span class="caption">範例 16-9: Attempting to use <code>val</code> after we’ve sent it
-down the channel</span></p>
-<p>Here, we try to print <code>val</code> after we’ve sent it down the channel via <code>tx.send</code>.
-Allowing this would be a bad idea: once the value has been sent to another
-thread, that thread could modify or drop it before we try to use the value
-again. Potentially, the other thread’s modifications could cause errors or
-unexpected results due to inconsistent or nonexistent data. However, Rust gives
-us an error if we try to compile the code in Listing 16-9:</p>
+<p><span class="caption">範例 16-9：在我們將 <code>val</code> 傳入通道後嘗試使用其值</span></p>
+<p>我們在這裡透過 <code>tx.send</code> 將 <code>val</code> 傳入通道之後嘗試印出其值。允許這麼做的話會是個壞主意，一旦數值被傳至其他執行緒，該執行緒就可以在我們嘗試再次使用該值之前修改或釋放其值。其他執行緒的修改有機會因爲不一致或不存在的資料而導致錯誤或意料之外的結果。不過如果我試著編譯範例 16-9 的程式碼的話，Rust 會給我們一個錯誤：</p>
 <pre><code class="language-console">$ cargo run
    Compiling message-passing v0.1.0 (file:///projects/message-passing)
 error[E0382]: borrow of moved value: `val`
@@ -15486,16 +15407,9 @@ error: could not compile `message-passing`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>Our concurrency mistake has caused a compile time error. The <code>send</code> function
-takes ownership of its parameter, and when the value is moved, the receiver
-takes ownership of it. This stops us from accidentally using the value again
-after sending it; the ownership system checks that everything is okay.</p>
-<h3><a class="header" href="#sending-multiple-values-and-seeing-the-receiver-waiting" id="sending-multiple-values-and-seeing-the-receiver-waiting">Sending Multiple Values and Seeing the Receiver Waiting</a></h3>
-<p>The code in Listing 16-8 compiled and ran, but it didn’t clearly show us that
-two separate threads were talking to each other over the channel. In Listing
-16-10 we’ve made some modifications that will prove the code in Listing 16-8 is
-running concurrently: the spawned thread will now send multiple messages and
-pause for a second between each message.</p>
+<p>我們的並行錯誤產生了一個編譯時錯誤。<code>send</code> 函式會取走其參數的所有權，並當數值移動時，接收端會在取得其所有權。這能阻止我們在傳送數值過後不小心再次使用其值，所有權系統會檢查一切是否符合規則。</p>
+<h3><a class="header" href="#傳送多重數值並觀察接收者等待" id="傳送多重數值並觀察接收者等待">傳送多重數值並觀察接收者等待</a></h3>
+<p>範例 16-8 的程式碼可以編譯通過並執行，但它並沒有清楚表達出兩個不同的執行緒正透過通道彼此溝通。在範例 16-10 中我們做了些修改來證明範例 16-8 的程式有正確執行，產生的執行緒先在會傳送數個訊息並在每個訊息間暫停個一秒鐘。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::sync::mpsc;
 use std::thread;
@@ -15523,17 +15437,10 @@ fn main() {
     }
 }
 </code></pre></pre>
-<p><span class="caption">範例 16-10: Sending multiple messages and pausing
-between each</span></p>
-<p>This time, the spawned thread has a vector of strings that we want to send to
-the main thread. We iterate over them, sending each individually, and pause
-between each by calling the <code>thread::sleep</code> function with a <code>Duration</code> value of
-1 second.</p>
-<p>In the main thread, we’re not calling the <code>recv</code> function explicitly anymore:
-instead, we’re treating <code>rx</code> as an iterator. For each value received, we’re
-printing it. When the channel is closed, iteration will end.</p>
-<p>When running the code in Listing 16-10, you should see the following output
-with a 1-second pause in between each line:</p>
+<p><span class="caption">範例 16-10：傳送數個訊息並在之間暫停片刻</span></p>
+<p>這次產生的執行緒有個字串 vector，我們希望能傳送它們到主執行緒中。我們遍歷它們，單獨傳送每個值，然後透過 <code>Duration</code> 數值呼叫 <code>thread::sleep</code> 來暫停一秒。</p>
+<p>在主執行緒中，我們不再顯式呼叫 <code>recv</code> 函式，我們改將 <code>rx</code> 作爲疊代器使用。對每個接收到的數值，我們印出它。當通道關閉時，疊代器就會結束。</p>
+<p>當執行範例 16-10 的程式碼，你應該會看到以下輸出，每一行會間格一秒鐘：</p>
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
@@ -15542,14 +15449,9 @@ Got: from
 Got: the
 Got: thread
 </code></pre>
-<p>Because we don’t have any code that pauses or delays in the <code>for</code> loop in the
-main thread, we can tell that the main thread is waiting to receive values from
-the spawned thread.</p>
-<h3><a class="header" href="#creating-multiple-producers-by-cloning-the-transmitter" id="creating-multiple-producers-by-cloning-the-transmitter">Creating Multiple Producers by Cloning the Transmitter</a></h3>
-<p>Earlier we mentioned that <code>mpsc</code> was an acronym for <em>multiple producer,
-single consumer</em>. Let’s put <code>mpsc</code> to use and expand the code in Listing 16-10
-to create multiple threads that all send values to the same receiver. We can do
-so by cloning the transmitting half of the channel, as shown in Listing 16-11:</p>
+<p>因爲我們在主執行緒中的 <code>for</code> 迴圈內沒有任何會暫停或延遲的程式碼，所以我們可以看出主執行緒是在等待產生的執行緒傳送的數值。</p>
+<h3><a class="header" href="#透過克隆發送者來建立多重生產者creating-multiple-producers-by-cloning-the-transmitter" id="透過克隆發送者來建立多重生產者creating-multiple-producers-by-cloning-the-transmitter">透過克隆發送者來建立多重生產者Creating Multiple Producers by Cloning the Transmitter</a></h3>
+<p>稍早之前我們提過 <code>mpsc</code> 是*多重生產者、唯一消費者（multiple producer, single consumer）*的縮寫。讓我們來使用 <code>mpsc</code> 並擴產範例 16-10 的程式碼來建立數個執行緒，它們都將傳遞數值給同個接收者。爲此我們可以克隆通道的發送部分，如範例 16-11 所示：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::sync::mpsc;
 </span><span class="boring">use std::thread;
@@ -15596,14 +15498,9 @@ so by cloning the transmitting half of the channel, as shown in Listing 16-11:</
     // --snip--
 <span class="boring">}
 </span></code></pre></pre>
-<p><span class="caption">範例 16-11: Sending multiple messages from multiple
-producers</span></p>
-<p>This time, before we create the first spawned thread, we call <code>clone</code> on the
-sending end of the channel. This will give us a new sending handle we can pass
-to the first spawned thread. We pass the original sending end of the channel to
-a second spawned thread. This gives us two threads, each sending different
-messages to the receiving end of the channel.</p>
-<p>When you run the code, your output should look something like this:</p>
+<p><span class="caption">範例 16-11：從多重生產者傳遞數個訊息</span></p>
+<p>這次在我們建立第一個產生的執行緒前，我們會對通道的發送端呼叫 <code>clone</code>。這能給我們一個新的發送者，讓我們可以移入第一個產生的執行緒。接著我們將原本的通道發送端移入第二個產生的執行緒中。這樣我們就有了兩條執行緒，每條都能傳送不同的訊息給通道的接收端。</p>
+<p>當你執行程式碼時，你的輸出應該會類似以下結果：</p>
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
@@ -15616,12 +15513,15 @@ Got: the
 Got: thread
 Got: you
 </code></pre>
-<p>You might see the values in another order; it depends on your system. This is
-what makes concurrency interesting as well as difficult. If you experiment with
-<code>thread::sleep</code>, giving it various values in the different threads, each run
-will be more nondeterministic and create different output each time.</p>
-<p>Now that we’ve looked at how channels work, let’s look at a different method of
-concurrency.</p>
+<p>你可能會看到數值以不同順序排序，這完全依據你的系統來決定。這正是並行程式設計既有趣卻又困難。如果你加上 <code>thread::sleep</code> 來實驗，並在不同執行緒給予不同數值的話，就會發現每一輪都會更不確定，每次都會產生不同的輸出結果。</p>
+<p>現在我們已經看完通道如何運作，接著讓我們來看看並行的不同方法吧。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch16-02-message-passing.md">e5ed971</a></li>
+<li>updated: 2020-09-21</li>
+</ul>
+</blockquote>
 <h2><a class="header" href="#shared-state-concurrency" id="shared-state-concurrency">Shared-State Concurrency</a></h2>
 <p>Message passing is a fine way of handling concurrency, but it’s not the only
 one. Consider this part of the slogan from the Go language documentation again:
